# NIFI_MCP_SERVER

./: .gitignore  README.md  config.example.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  start_nifi_mcp.sh
nifi_chat_ui/: app.py
nifi_mcp_server/: __init__.py  config.example.yaml  nifi_api.py  nlp_processor.py  server.py
nifi_mcp_server/tools/: __init__.py  connections.py  documentation.py  flow_control.py  process_groups.py  processors.py  search.py  templates.py
tests/: test_nlp_processor.py
